--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Relynk - Real Estate API</title>
+    <meta
+      name="description"
+      content="The one API for building owners & service providers. Get access to your commercial building's real-time data"
+    />
+    <meta
+      name="keywords"
+      content="Real Estate, Real Estate API, API, Building Data, Data"
+    />
   </head>
   <body>
     <div id="root"></div>
