--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Relynk - Real Estate API</title>
+    <title>
+      Relynk | Real Estate API | Get Access to Your Commercial Building's
+      Real-Time Data
+    </title>
     <meta
       name="description"
       content="The one API for building owners & service providers. Get access to your commercial building's real-time data"
