adding meta for gogle verification

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       name="keywords"
       content="Real Estate, Real Estate API, API, Building Data, Data"
     />
+    <meta
+      name="google-site-verification"
+      content="xsPKzGLHf6jHHXGAogHJNSp9Ap9FSRwpYL1tSJ55C84"
+    />
   </head>
   <!-- Google tag (gtag.js) -->
   <script
